@@ -1,14 +1,14 @@
 [![Release](https://jitpack.io/v/umjammer/vavi-sound-alac.svg)](https://jitpack.io/#umjammer/vavi-sound-alac)
 [![Java CI](https://github.com/umjammer/vavi-sound-alac/actions/workflows/maven.yml/badge.svg)](https://github.com/umjammer/vavi-sound-alac/actions/workflows/maven.yml)
 [![CodeQL](https://github.com/umjammer/vavi-sound-alac/actions/workflows/codeql-analysis.yml/badge.svg)](https://github.com/umjammer/vavi-sound-alac/actions/workflows/codeql-analysis.yml)
-![Java](https://img.shields.io/badge/Java-17-b07219)
+![Java](https://img.shields.io/badge/Java-25-b07219)
 [![Parent](https://img.shields.io/badge/Parent-vavi--sound--sandbox-pink)](https://github.com/umjammer/vavi-sound-sandbox)
 
 # vavi-sound-alac
 
-<img src="https://user-images.githubusercontent.com/493908/194699473-aaee645a-d178-4d9f-b220-9de335bf4c62.png" width="320" alt="ALAC logo"/><sub>© <a href="https://alac.macosforge.org">Apple</a></sub>
+<img src="src/test/resources/duke_alac.png" width="160" alt="logo"/>
 
-Pure Java Apple Lossless decoder (Java Sound SPI)
+ Pure Java Apple Lossless decoder
 
 it works as `javax.sound.sampled.spi`</br>
 this project is a fork of [soiaf/Java-Apple-Lossless-decoder](https://github.com/soiaf/Java-Apple-Lossless-decoder)
@@ -20,11 +20,28 @@ https://jitpack.io/#umjammer/vavi-sound-alac
 ## Usage
 
 ```java
-    AudioInputStream ais = AudioSystem.getAudioInputStream(Paths.get(alac).toFile());
-    Clip clip = AudioSystem.getClip();
-    clip.open(AudioSystem.getAudioInputStream(new AudioFormat(44100, 16, 2, true, false), ais));
-    clip.loop(Clip.LOOP_CONTINUOUSLY);
+var alacAis = AudioSystem.getAudioInputStream(new BufferedInputStream(Files.newInputStream(alac)));
+var inFormat = sourceAis.getFormat();
+var outFormat = new AudioFormat(44100, 16, 2, true, false);
+var pcmAis = AudioSystem.getAudioInputStream(outFormat, alacAis);
+var line = (SourceDataLine) AudioSystem.getLine(new DataLine.Info(SourceDataLine.class, pcmAis.getFormat()));
+line.open(pcmAis.getFormat());
+line.start();
+var buffer = new byte[line.getBufferSize()];
+int bytesRead;
+while ((bytesRead = pcmAis.read(buffer)) != -1) {
+  line.write(buffer, 0, bytesRead);
+}
+line.drain();
 ```
+
+### jvm args
+
+```
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+```
+
 
 ## References
 
@@ -36,4 +53,4 @@ https://jitpack.io/#umjammer/vavi-sound-alac
 
 ---
 
-[Original](src/main/java/com/beatofthedrum/alacdecoder/readme.md)
+<sub>image designed by @umjammer, drawn by nano banana</sub>
